Move reading data methods to new folder

--- a/data/Untitled.ipynb
+++ b/data/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e9677727",
+   "id": "a17c4cb2",
    "metadata": {},
    "outputs": [
     {
@@ -32,8 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "384b7889",
+   "execution_count": 3,
+   "id": "a280982a",
    "metadata": {},
    "outputs": [
     {
@@ -47,23 +47,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Copying files: 97698 files [00:09, 9866.39 files/s] \n"
+      "Copying files: 97698 files [00:09, 9852.59 files/s] \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 39079 images belonging to 2 classes.\n",
-      "Found 39079 images belonging to 2 classes.\n",
-      "Found 19540 images belonging to 2 classes.\n"
+      "Found 78158 images belonging to 2 classes.\n",
+      "Found 9769 images belonging to 2 classes.\n",
+      "Found 9771 images belonging to 2 classes.\n"
      ]
     }
    ],
    "source": [
     "image_size = (224, 224)\n",
     "batch_size = 16\n",
-    "data = ir.readImagesEfficientNet(\"../../FairFace\", image_size, )"
+    "data = ir.readImagesEfficientNet(\"../../FairFace\", image_size, 32)"
    ]
   }
  ],
