commit before merge

--- a/base_model.ipynb
+++ b/base_model.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Christophs\n",
+    "# TODO: Replace with Christophs update code for loading data sets. \n",
     "def readImages(folderName, image_size, batch_size):\n",
     "    train_ds = keras.preprocessing.image_dataset_from_directory(\n",
     "        folderName,\n",
