--- a/transfer_learning.ipynb
+++ b/transfer_learning.ipynb
@@ -13,6 +13,7 @@
     "    2.1. Freeze its layers\n",
     "3. Build new model on top of it\n",
     "4. Train new model with museum data set\n",
+    "5. TODO: Fine tune?\n",
     "\"\"\""
    ]
   },
@@ -37,6 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# \n",
     "def readImages(folderName, image_size, batch_size):\n",
     "    train_ds = keras.preprocessing.image_dataset_from_directory(\n",
     "        folderName,\n",
