Fix bug in test

--- a/EfficientNet_without_reweighting.ipynb
+++ b/EfficientNet_without_reweighting.ipynb
@@ -82,8 +82,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_predict, test_labels, dir_name = ev.testModel(base_model, ds_test, dir_name)\n",
-    "ev.testModelWithThresholdChange(base_model, ds_val, test_predict, test_labels, dir_name)"
+    "test_predict, test_labels, dir_name = ev.testModel(base_model, test_batches, dir_name)\n",
+    "ev.testModelWithThresholdChange(base_model, val_batches, test_predict, test_labels, dir_name)"
    ]
   }
  ],
