Fixes for model without transfer

--- a/EfficientNet_without_transfer.ipynb
+++ b/EfficientNet_without_transfer.ipynb
@@ -25,12 +25,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "preprocess_input = tf.keras.applications.vgg16.preprocess_input\n",
+    "preprocess_input = tf.keras.applications.efficientnet.preprocess_input\n",
     "\n",
     "image_size = (224,224)\n",
-    "batch_size = 8\n",
+    "batch_size = 256\n",
     "epochs = 60\n",
-    "(ds_train, train_batches, ds_val, val_batches, ds_test, test_batches, count_classes) = ir.readData(\"/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces\", image_size, batch_size, preprocess_input)\n",
+    "(ds_train, train_batches, ds_val, val_batches, ds_test, test_batches, count_classes) = ir.readData(\"/mimer/NOBACKUP/groups/snic2022-22-1091/FairFace\", image_size, batch_size, preprocess_input)\n",
     "\n",
     "class_weight = mit.findClassWeights(train_batches)\n",
     "\n",
@@ -42,13 +42,7 @@
     "\n",
     "base_model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=1e-3), \n",
     "                           loss=\"binary_crossentropy\", \n",
-    "                           metrics=metric_list)\n",
-    "\n",
-    "options = tf.data.Options()\n",
-    "options.experimental_distribute.auto_shard_policy = tf.data.experimental.AutoShardPolicy.OFF\n",
-    "ds_train = ds_train.with_options(options)\n",
-    "ds_val = ds_val.with_options(options)\n",
-    "ds_test = ds_test.with_options(options)"
+    "                           metrics=metric_list)"
    ]
   },
   {
@@ -58,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "utils.train_model(base_model, epochs, ds_train, train_batches, ds_val, None, False)"
+    "utils.train_model(base_model, epochs, ds_train, train_batches, ds_val, val_batches, None, False)"
    ]
   },
   {
