moved preprocessing as layer to Xception model and changed the top layers for Xception model

--- a/Xception.ipynb
+++ b/Xception.ipynb
@@ -322,13 +322,7 @@
       "Epoch 97/200\n",
       "10/10 - 4s - loss: 1.0986 - accuracy: 0.5125 - 4s/epoch - 441ms/step\n",
       "Epoch 98/200\n",
-      "10/10 - 4s - loss: 1.8961 - accuracy: 0.4469 - 4s/epoch - 448ms/step\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "10/10 - 4s - loss: 1.8961 - accuracy: 0.4469 - 4s/epoch - 448ms/step\n",
       "Epoch 99/200\n",
       "10/10 - 4s - loss: 1.1208 - accuracy: 0.5267 - 4s/epoch - 422ms/step\n",
       "Epoch 100/200\n",
@@ -379,9 +373,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "3f051760",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -576,13 +568,7 @@
       "123/123 [==============================] - 78s 632ms/step - loss: 0.4872 - accuracy: 0.7584 - true_positives_21: 1357.0000 - true_negatives_14: 1613.0000 - false_positives_17: 439.0000 - false_negatives_18: 507.0000 - true_positive_rate: 0.7280 - true_negative_rate: 0.7861 - false_positive_rate: 0.2139 - false_negative_rate: 0.2720 - positive_predicted_value: 0.7556 - false_discovery_rate: 0.2444 - negative_predicted_value: 0.7608 - false_omission_rate: 0.2392 - binary_demographic_parity_diff: -324.0000 - demographic_parity: 1796.0000 - binary_equalized_odds_diff: 0.0581 - binary_proportional_parity_diff: -0.0827 - proportional_parity: 0.4586 - binary_predictive_rate_parity_diff: -0.0053 - predictive_rate_parity: 0.7556 - binary_accuracy_parity_diff: 0.5169 - accuracy_parity: 0.7584 - false_negative_rate_parity_diff: -0.0581 - false_positive_rate_parity_diff: 0.0581 - binary_negative_predictive_rate_parity_diff: 0.0053 - negative_predictive_rate_parity: 0.7556 - binary_specificity_parity_diff: -0.0581 - val_loss: 0.6942 - val_accuracy: 0.4888 - val_true_positives_21: 239.0000 - val_true_negatives_14: 0.0000e+00 - val_false_positives_17: 250.0000 - val_false_negatives_18: 0.0000e+00 - val_true_positive_rate: 1.0000 - val_true_negative_rate: 0.0000e+00 - val_false_positive_rate: 1.0000 - val_false_negative_rate: 0.0000e+00 - val_positive_predicted_value: 0.4888 - val_false_discovery_rate: 0.5112 - val_negative_predicted_value: 0.0000e+00 - val_false_omission_rate: 0.0000e+00 - val_binary_demographic_parity_diff: 489.0000 - val_demographic_parity: 489.0000 - val_binary_equalized_odds_diff: -1.0000 - val_binary_proportional_parity_diff: 1.0000 - val_proportional_parity: 1.0000 - val_binary_predictive_rate_parity_diff: 0.4888 - val_predictive_rate_parity: 0.4888 - val_binary_accuracy_parity_diff: -0.0225 - val_accuracy_parity: 0.4888 - val_false_negative_rate_parity_diff: 1.0000 - val_false_positive_rate_parity_diff: -1.0000 - val_binary_negative_predictive_rate_parity_diff: -0.4888 - val_negative_predictive_rate_parity: 0.4888 - val_binary_specificity_parity_diff: 1.0000 - lr: 1.0000e-05\n",
       "sc\n",
       "Epoch 4/20\n",
-      "123/123 [==============================] - 78s 636ms/step - loss: 0.4235 - accuracy: 0.8090 - true_positives_21: 1478.0000 - true_negatives_14: 1690.0000 - false_positives_17: 362.0000 - false_negatives_18: 386.0000 - true_positive_rate: 0.7929 - true_negative_rate: 0.8236 - false_positive_rate: 0.1764 - false_negative_rate: 0.2071 - positive_predicted_value: 0.8033 - false_discovery_rate: 0.1967 - negative_predicted_value: 0.8141 - false_omission_rate: 0.1859 - binary_demographic_parity_diff: -236.0000 - demographic_parity: 1840.0000 - binary_equalized_odds_diff: 0.0307 - binary_proportional_parity_diff: -0.0603 - proportional_parity: 0.4699 - binary_predictive_rate_parity_diff: -0.0108 - predictive_rate_parity: 0.8033 - binary_accuracy_parity_diff: 0.6180 - accuracy_parity: 0.8090 - false_negative_rate_parity_diff: -0.0307 - false_positive_rate_parity_diff: 0.0307 - binary_negative_predictive_rate_parity_diff: 0.0108 - negative_predictive_rate_parity: 0.8033 - binary_specificity_parity_diff: -0.0307 - val_loss: 0.6904 - val_accuracy: 0.4724 - val_true_positives_21: 227.0000 - val_true_negatives_14: 4.0000 - val_false_positives_17: 258.0000 - val_false_negatives_18: 0.0000e+00 - val_true_positive_rate: 1.0000 - val_true_negative_rate: 0.0153 - val_false_positive_rate: 0.9847 - val_false_negative_rate: 0.0000e+00 - val_positive_predicted_value: 0.4680 - val_false_discovery_rate: 0.5320 - val_negative_predicted_value: 1.0000 - val_false_omission_rate: 0.0000e+00 - val_binary_demographic_parity_diff: 481.0000 - val_demographic_parity: 485.0000 - val_binary_equalized_odds_diff: -0.9847 - val_binary_proportional_parity_diff: 0.9836 - val_proportional_parity: 0.9918 - val_binary_predictive_rate_parity_diff: -0.5320 - val_predictive_rate_parity: 0.4680 - val_binary_accuracy_parity_diff: -0.0552 - val_accuracy_parity: 0.4724 - val_false_negative_rate_parity_diff: 0.9847 - val_false_positive_rate_parity_diff: -0.9847 - val_binary_negative_predictive_rate_parity_diff: 0.5320 - val_negative_predictive_rate_parity: 0.4680 - val_binary_specificity_parity_diff: 0.9847 - lr: 1.0000e-05\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "123/123 [==============================] - 78s 636ms/step - loss: 0.4235 - accuracy: 0.8090 - true_positives_21: 1478.0000 - true_negatives_14: 1690.0000 - false_positives_17: 362.0000 - false_negatives_18: 386.0000 - true_positive_rate: 0.7929 - true_negative_rate: 0.8236 - false_positive_rate: 0.1764 - false_negative_rate: 0.2071 - positive_predicted_value: 0.8033 - false_discovery_rate: 0.1967 - negative_predicted_value: 0.8141 - false_omission_rate: 0.1859 - binary_demographic_parity_diff: -236.0000 - demographic_parity: 1840.0000 - binary_equalized_odds_diff: 0.0307 - binary_proportional_parity_diff: -0.0603 - proportional_parity: 0.4699 - binary_predictive_rate_parity_diff: -0.0108 - predictive_rate_parity: 0.8033 - binary_accuracy_parity_diff: 0.6180 - accuracy_parity: 0.8090 - false_negative_rate_parity_diff: -0.0307 - false_positive_rate_parity_diff: 0.0307 - binary_negative_predictive_rate_parity_diff: 0.0108 - negative_predictive_rate_parity: 0.8033 - binary_specificity_parity_diff: -0.0307 - val_loss: 0.6904 - val_accuracy: 0.4724 - val_true_positives_21: 227.0000 - val_true_negatives_14: 4.0000 - val_false_positives_17: 258.0000 - val_false_negatives_18: 0.0000e+00 - val_true_positive_rate: 1.0000 - val_true_negative_rate: 0.0153 - val_false_positive_rate: 0.9847 - val_false_negative_rate: 0.0000e+00 - val_positive_predicted_value: 0.4680 - val_false_discovery_rate: 0.5320 - val_negative_predicted_value: 1.0000 - val_false_omission_rate: 0.0000e+00 - val_binary_demographic_parity_diff: 481.0000 - val_demographic_parity: 485.0000 - val_binary_equalized_odds_diff: -0.9847 - val_binary_proportional_parity_diff: 0.9836 - val_proportional_parity: 0.9918 - val_binary_predictive_rate_parity_diff: -0.5320 - val_predictive_rate_parity: 0.4680 - val_binary_accuracy_parity_diff: -0.0552 - val_accuracy_parity: 0.4724 - val_false_negative_rate_parity_diff: 0.9847 - val_false_positive_rate_parity_diff: -0.9847 - val_binary_negative_predictive_rate_parity_diff: 0.5320 - val_negative_predictive_rate_parity: 0.4680 - val_binary_specificity_parity_diff: 0.9847 - lr: 1.0000e-05\n",
       "sc\n",
       "Epoch 5/20\n",
       "123/123 [==============================] - 78s 634ms/step - loss: 0.3330 - accuracy: 0.8649 - true_positives_21: 1590.0000 - true_negatives_14: 1797.0000 - false_positives_17: 255.0000 - false_negatives_18: 274.0000 - true_positive_rate: 0.8530 - true_negative_rate: 0.8757 - false_positive_rate: 0.1243 - false_negative_rate: 0.1470 - positive_predicted_value: 0.8618 - false_discovery_rate: 0.1382 - negative_predicted_value: 0.8677 - false_omission_rate: 0.1323 - binary_demographic_parity_diff: -226.0000 - demographic_parity: 1845.0000 - binary_equalized_odds_diff: 0.0227 - binary_proportional_parity_diff: -0.0577 - proportional_parity: 0.4711 - binary_predictive_rate_parity_diff: -0.0059 - predictive_rate_parity: 0.8618 - binary_accuracy_parity_diff: 0.7298 - accuracy_parity: 0.8649 - false_negative_rate_parity_diff: -0.0227 - false_positive_rate_parity_diff: 0.0227 - binary_negative_predictive_rate_parity_diff: 0.0059 - negative_predictive_rate_parity: 0.8618 - binary_specificity_parity_diff: -0.0227 - val_loss: 0.6503 - val_accuracy: 0.6278 - val_true_positives_21: 212.0000 - val_true_negatives_14: 95.0000 - val_false_positives_17: 167.0000 - val_false_negatives_18: 15.0000 - val_true_positive_rate: 0.9339 - val_true_negative_rate: 0.3626 - val_false_positive_rate: 0.6374 - val_false_negative_rate: 0.0661 - val_positive_predicted_value: 0.5594 - val_false_discovery_rate: 0.4406 - val_negative_predicted_value: 0.8636 - val_false_omission_rate: 0.1364 - val_binary_demographic_parity_diff: 269.0000 - val_demographic_parity: 379.0000 - val_binary_equalized_odds_diff: -0.5713 - val_binary_proportional_parity_diff: 0.5501 - val_proportional_parity: 0.7751 - val_binary_predictive_rate_parity_diff: -0.3043 - val_predictive_rate_parity: 0.5594 - val_binary_accuracy_parity_diff: 0.2556 - val_accuracy_parity: 0.6278 - val_false_negative_rate_parity_diff: 0.5713 - val_false_positive_rate_parity_diff: -0.5713 - val_binary_negative_predictive_rate_parity_diff: 0.3043 - val_negative_predictive_rate_parity: 0.5594 - val_binary_specificity_parity_diff: 0.5713 - lr: 1.0000e-05\n",
@@ -623,9 +609,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "180fb8a9",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "test_predict, test_labels, dir_name = ev.testModel(model, ds_test, test_batches, dir_name)\n",
@@ -657,7 +641,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
